k8-manifests/airflow-api-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-api-server
  labels:
    app: airflow-api-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow-api-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: airflow-api-server
    spec:
      containers:
      - name: airflow-api-server
        command: ['build/webserver_entrypoint.sh']
        args: ['pod-template-file.yaml','__AIRFLOW_IMAGE__']
        image: __AIRFLOW_IMAGE__  # sed will edit this for easy configuration between AWS EKS and minikube
        imagePullPolicy: __IMAGE_PULL_POLICY__  # sed will edit this for easy configuration between AWS EKS and minikube
        ports:
        - containerPort: 80
