k8-manifests/airflow-webserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airflow-webserver-service
spec:
  selector:
    app: airflow-webserver
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
